<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CalculateActivity">
    <TextView
            android:text="@string/result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/result_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/name_of_start_vertex"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/calculate_graph_button"
            app:layout_constraintStart_toEndOf="@+id/name_of_start_vertex"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/result_text"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/sort_button"/>
    <Button
            android:text="@string/sort_vertex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sort_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_of_start_vertex"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_of_start_vertex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/calculate_graph_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/calculate_graph_button"
            app:layout_constraintHorizontal_weight="3"
            android:hint="@string/start_vertex"
            tools:ignore="Autofill"/>
</androidx.constraintlayout.widget.ConstraintLayout>