<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorPrimary">
    <Button
            android:text="@string/calculate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/calculate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintStart_toEndOf="@+id/start_vertex"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"/>
    <EditText
            android:layout_width="301dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_of_new_vertex"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/background_light"
            android:hint="@string/name_of_new_vertex"
            tools:ignore="Autofill"
            app:layout_constraintVertical_weight="2"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/add_button"
            app:layout_constraintHorizontal_weight="3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listOfVertex"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/result"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/start_vertex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            android:background="@android:color/background_light"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/calculate_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_weight="3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:hint="@string/start_vertex"
            tools:ignore="Autofill"/>
    <TextView
            android:text="@string/your_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/result"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="2"
            android:background="@android:color/background_light"
            app:layout_constraintTop_toBottomOf="@+id/add_button"
            app:layout_constraintBottom_toTopOf="@+id/calculate_button"/>
    <Button
            android:text="@string/add_vertex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintTop_toBottomOf="@id/listOfVertex"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/name_of_new_vertex"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/listOfVertex"
            app:layout_constraintBottom_toTopOf="@id/add_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="10"
            android:background="@android:color/background_light"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>