<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="horizontal"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginLeft="8dp"
                                                   android:layout_marginTop="8dp"
                                                   android:layout_marginRight="8dp"
                                                   android:layout_marginBottom="8dp"
                                                   android:background="@android:color/background_light">

    <TextView
            android:text="@string/name_of_vertex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_of_vertex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/add_neighbour"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/add_neighbour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_neighbour"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/name_of_vertex"
            app:layout_constraintHorizontal_bias="0.5"
            android:textSize="12sp"
            app:layout_constraintHorizontal_weight="1"/>
    <TextView
            android:text="@string/current_neighbours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/current_neighbours"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_of_vertex"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/add_neighbour"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>