<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:background="@color/colorPrimary">
    <com.example.graphonandroid.views.GraphView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/graph_view"
            app:layout_constraintBottom_toTopOf="@+id/calculate_graph_button"
            app:layout_constraintTop_toBottomOf="@+id/result_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_weight="7"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/background_light"/>
    <TextView
            android:text="@string/result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/result_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/graph_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/calculate_graph_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/sort_button"
            app:layout_constraintTop_toBottomOf="@+id/graph_view"
            app:layout_constraintVertical_weight="1"/>
    <Button
            android:text="@string/sort_vertex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sort_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/calculate_graph_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1"/>
</androidx.constraintlayout.widget.ConstraintLayout>